# DEPRECATED-freebsd-ports-graphics

./: .gitignore  GIDs  UPDATING
Mk/: bsd.xorg.mk
devel/libclc/: Makefile  distinfo  pkg-plist
devel/libdevq/: Makefile  distinfo
devel/llvm40/: Makefile
devel/sdl20/: Makefile
graphics/darktable/: Makefile
graphics/dri/: Makefile  pkg-plist
graphics/freeglut/: Makefile  pkg-plist
graphics/gbm/: Makefile
graphics/intel-backlight/: Makefile  distinfo
graphics/libEGL/: Makefile
graphics/libGL/: Makefile  Makefile.common  distinfo  loader.c
graphics/libGL/files/: configure.ac  patch-configure  patch-src_gallium_state__trackers_clover_llvm_invocation.cpp  patch-src_gallium_state__trackers_clover_llvm_metadata.hpp  patch-src_gallium_winsys_amdgpu_drm_amdgpu__winsys.c  patch-src_intel_tools_aubinator.c  patch-src_mesa_state__tracker_st__atom__framebuffer.c  patch-src_util_u__endian.h
graphics/libdrm/: Makefile  distinfo  pkg-plist
graphics/libglapi/: Makefile
graphics/libglesv2/: Makefile
graphics/libosmesa/: Makefile
graphics/mesa-demos/: Makefile  pkg-plist
lang/clover/: Makefile
lang/pocl/: Makefile
wayland/: Makefile
wayland/libepoll-shim/: Makefile
wayland/libgudev/: Makefile
wayland/libinput/: Makefile  distinfo
wayland/libudev-devd/: Makefile  distinfo
wayland/libwacom/: Makefile
wayland/sway/: Makefile  distinfo
wayland/wayland/: Makefile
wayland/wayland-protocols/: Makefile  distinfo
wayland/weston/: Makefile  pkg-plist
wayland/wlc/: Makefile  distinfo  pkg-plist
x11-drivers/: Makefile
x11-drivers/drm-i915-kmod/: Makefile
x11-drivers/drm-kmod/: Makefile
x11-drivers/xf86-input-synaptics/: Makefile
x11-drivers/xf86-input-vmmouse/: Makefile  distinfo
x11-drivers/xf86-video-ati/: Makefile
x11-drivers/xf86-video-ati-ums/: Makefile
x11-drivers/xf86-video-intel/: Makefile
x11-drivers/xorg-drivers/: Makefile
x11-fonts/font-util/: Makefile  distinfo
x11-fonts/libXfont/: Makefile
x11-fonts/libXft/: Makefile
x11-fonts/meslo/: Makefile  distinfo
x11-fonts/meslo-ttf/: Makefile
x11-fonts/xfs/: Makefile  pkg-plist
x11-servers/xorg-server/: Makefile
x11/gdm/: Makefile
x11/libXext/: Makefile
x11/libXi/: Makefile
x11/libXp/: Makefile
x11/libXvMC/: Makefile
x11/libXxf86vm/: Makefile
x11/libxcb/: Makefile
x11/pixman/: Makefile
x11/sessreg/: Makefile
x11/x11perf/: Makefile
x11/xkeyboard-config/: Makefile  distinfo
(+33 files in other folders)
